; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_backtrace_module/extr_ngx_backtrace_module.c_ngx_error_signal_handler.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_backtrace_module/extr_ngx_backtrace_module.c_ngx_error_signal_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32, i32 }
%struct.TYPE_12__ = type { i32, %struct.TYPE_10__*, i32 }
%struct.TYPE_10__ = type { %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i32 }
%struct.sigaction = type { i32, i32 }
%struct.TYPE_11__ = type { i32, %struct.TYPE_10__* }

@ngx_backtrace_signals = common dso_local global %struct.TYPE_9__* null, align 8
@ngx_cycle = common dso_local global %struct.TYPE_12__* null, align 8
@ngx_backtrace_module = common dso_local global i32 0, align 4
@NGX_LOG_ERR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"nginx coredump by signal %d (%s)\00", align 1
@SIG_DFL = common dso_local global i32 0, align 4
@ngx_errno = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [21 x i8] c"sigaction(%s) failed\00", align 1
@NGX_CONF_UNSET = common dso_local global i32 0, align 4
@NGX_BACKTRACE_DEFAULT_STACK_MAX_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @ngx_error_signal_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ngx_error_signal_handler(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_10__*, align 8
  %6 = alloca %struct.TYPE_9__*, align 8
  %7 = alloca %struct.sigaction, align 4
  %8 = alloca %struct.TYPE_11__*, align 8
  store i32 %0, i32* %2, align 4
  %9 = load %struct.TYPE_9__*, %struct.TYPE_9__** @ngx_backtrace_signals, align 8
  store %struct.TYPE_9__* %9, %struct.TYPE_9__** %6, align 8
  br label %10

10:                                               ; preds = %23, %1
  %11 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %12 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %26

15:                                               ; preds = %10
  %16 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %17 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %2, align 4
  %20 = icmp eq i32 %18, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %15
  br label %26

22:                                               ; preds = %15
  br label %23

23:                                               ; preds = %22
  %24 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %25 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %24, i32 1
  store %struct.TYPE_9__* %25, %struct.TYPE_9__** %6, align 8
  br label %10

26:                                               ; preds = %21, %10
  %27 = load %struct.TYPE_12__*, %struct.TYPE_12__** @ngx_cycle, align 8
  %28 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %27, i32 0, i32 2
  %29 = load i32, i32* %28, align 8
  %30 = load i32, i32* @ngx_backtrace_module, align 4
  %31 = call i64 @ngx_get_conf(i32 %29, i32 %30)
  %32 = inttoptr i64 %31 to %struct.TYPE_11__*
  store %struct.TYPE_11__* %32, %struct.TYPE_11__** %8, align 8
  %33 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %34 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %33, i32 0, i32 1
  %35 = load %struct.TYPE_10__*, %struct.TYPE_10__** %34, align 8
  %36 = icmp ne %struct.TYPE_10__* %35, null
  br i1 %36, label %37, label %41

37:                                               ; preds = %26
  %38 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %39 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %38, i32 0, i32 1
  %40 = load %struct.TYPE_10__*, %struct.TYPE_10__** %39, align 8
  br label %45

41:                                               ; preds = %26
  %42 = load %struct.TYPE_12__*, %struct.TYPE_12__** @ngx_cycle, align 8
  %43 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %42, i32 0, i32 1
  %44 = load %struct.TYPE_10__*, %struct.TYPE_10__** %43, align 8
  br label %45

45:                                               ; preds = %41, %37
  %46 = phi %struct.TYPE_10__* [ %40, %37 ], [ %44, %41 ]
  store %struct.TYPE_10__* %46, %struct.TYPE_10__** %5, align 8
  %47 = load i32, i32* @NGX_LOG_ERR, align 4
  %48 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %49 = load i32, i32* %2, align 4
  %50 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %51 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %50, i32 0, i32 1
  %52 = load i32, i32* %51, align 4
  %53 = call i32 (i32, %struct.TYPE_10__*, i32, i8*, i32, ...) @ngx_log_error(i32 %47, %struct.TYPE_10__* %48, i32 0, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %49, i32 %52)
  %54 = call i32 @ngx_memzero(%struct.sigaction* %7, i32 8)
  %55 = load i32, i32* @SIG_DFL, align 4
  %56 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %7, i32 0, i32 1
  store i32 %55, i32* %56, align 4
  %57 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %7, i32 0, i32 0
  %58 = call i32 @sigemptyset(i32* %57)
  %59 = load i32, i32* %2, align 4
  %60 = call i32 @sigaction(i32 %59, %struct.sigaction* %7, i32* null)
  %61 = icmp eq i32 %60, -1
  br i1 %61, label %62, label %70

62:                                               ; preds = %45
  %63 = load i32, i32* @NGX_LOG_ERR, align 4
  %64 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %65 = load i32, i32* @ngx_errno, align 4
  %66 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %67 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %66, i32 0, i32 1
  %68 = load i32, i32* %67, align 4
  %69 = call i32 (i32, %struct.TYPE_10__*, i32, i8*, i32, ...) @ngx_log_error(i32 %63, %struct.TYPE_10__* %64, i32 %65, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0), i32 %68)
  br label %70

70:                                               ; preds = %62, %45
  %71 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %72 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %71, i32 0, i32 0
  %73 = load i32, i32* %72, align 8
  %74 = load i32, i32* @NGX_CONF_UNSET, align 4
  %75 = icmp eq i32 %73, %74
  br i1 %75, label %76, label %80

76:                                               ; preds = %70
  %77 = load i32, i32* @NGX_BACKTRACE_DEFAULT_STACK_MAX_SIZE, align 4
  %78 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %79 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %78, i32 0, i32 0
  store i32 %77, i32* %79, align 8
  br label %80

80:                                               ; preds = %76, %70
  %81 = load %struct.TYPE_12__*, %struct.TYPE_12__** @ngx_cycle, align 8
  %82 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %81, i32 0, i32 0
  %83 = load i32, i32* %82, align 8
  %84 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %85 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %84, i32 0, i32 0
  %86 = load i32, i32* %85, align 8
  %87 = sext i32 %86 to i64
  %88 = mul i64 8, %87
  %89 = trunc i64 %88 to i32
  %90 = call i8* @ngx_pcalloc(i32 %83, i32 %89)
  store i8* %90, i8** %3, align 8
  %91 = load i8*, i8** %3, align 8
  %92 = icmp eq i8* %91, null
  br i1 %92, label %93, label %94

93:                                               ; preds = %80
  br label %108

94:                                               ; preds = %80
  %95 = load i8*, i8** %3, align 8
  %96 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %97 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %96, i32 0, i32 0
  %98 = load i32, i32* %97, align 8
  %99 = call i64 @backtrace(i8* %95, i32 %98)
  store i64 %99, i64* %4, align 8
  %100 = load i8*, i8** %3, align 8
  %101 = load i64, i64* %4, align 8
  %102 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %103 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %102, i32 0, i32 0
  %104 = load %struct.TYPE_8__*, %struct.TYPE_8__** %103, align 8
  %105 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %104, i32 0, i32 0
  %106 = load i32, i32* %105, align 4
  %107 = call i32 @backtrace_symbols_fd(i8* %100, i64 %101, i32 %106)
  br label %108

108:                                              ; preds = %94, %93
  %109 = call i32 (...) @ngx_getpid()
  %110 = load i32, i32* %2, align 4
  %111 = call i32 @kill(i32 %109, i32 %110)
  ret void
}

declare dso_local i64 @ngx_get_conf(i32, i32) #1

declare dso_local i32 @ngx_log_error(i32, %struct.TYPE_10__*, i32, i8*, i32, ...) #1

declare dso_local i32 @ngx_memzero(%struct.sigaction*, i32) #1

declare dso_local i32 @sigemptyset(i32*) #1

declare dso_local i32 @sigaction(i32, %struct.sigaction*, i32*) #1

declare dso_local i8* @ngx_pcalloc(i32, i32) #1

declare dso_local i64 @backtrace(i8*, i32) #1

declare dso_local i32 @backtrace_symbols_fd(i8*, i64, i32) #1

declare dso_local i32 @kill(i32, i32) #1

declare dso_local i32 @ngx_getpid(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
